# translation-server-dtos

./: .releaserc.json  Cargo.toml  README.md  justfile
.github/workflows/: release.yml  verify.yml
src/: dtos.rs  lib.rs
