[package]
name = "translation-server-dtos-silen"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/translation-server-dtos-silen"
description = "translation server dtos"
keywords = ["translation"]
repository = "https://github.com/SilenLoc/translation-server-dtos"
readme = "README.md"

[lib]
name = "translation_server_dtos_silen"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

